--- a/Assigment_Web106_PH35249/LienHe.html
+++ b/Assigment_Web106_PH35249/LienHe.html
@@ -19,6 +19,10 @@
         .name {
             height: 50px;
         }
+
+        img:hover {
+            box-shadow: 0 0 5px red;
+        }
     </style>
 </head>
 
@@ -63,7 +67,7 @@
             <img src="img/banner du lich.jpg" width="100%">
         </aside>
         <br>
-        <h1>Đăng nhâp tài khoản cảu bạn để được giúp đỡ</h1>
+        <h1>Đăng nhâp tài khoản của bạn để được giúp đỡ</h1>
         <br>
         <form>
             <div class="mb-3">
