--- a/Assigment_Web106_PH35249/TinTuc.html
+++ b/Assigment_Web106_PH35249/TinTuc.html
@@ -19,6 +19,10 @@
         .name {
             height: 50px;
         }
+
+        img:hover {
+            box-shadow: 0 0 5px red;
+        }
     </style>
 </head>
 
