--- a/Assigment_Web106_PH35249/Trangchu.html
+++ b/Assigment_Web106_PH35249/Trangchu.html
@@ -20,9 +20,13 @@
       height: 300px;
     }
 
-  .name{
-    height: 50px;
-  }
+    .name {
+      height: 50px;
+    }
+
+    img:hover {
+      box-shadow: 0 0 5px red;
+    }
   </style>
 </head>
 
